# gen3-analysis

./: .gitattributes  .gitignore  .pylintrc  .secrets.baseline  Dockerfile  README.md  debug_run.py  dockerrun.bash  gunicorn.conf.py  logfile  pyproject.toml  run.py  run.sh  serve-local-files.py  test.sh
.github/workflows/: ci.yml  docs.yaml
data/mmrf_gene_expression_test_data/: schemaless.sqlite3
docs/: openapi.yaml  quickstart.md
gen3analysis/: auth.py  clients.py  config.py  main.py  settings.py  test.py
gen3analysis/bamrest/: blueprint.py  exceptions.py  gzip.py  index.py  schemas.py  slicing.py
gen3analysis/dependencies/: gdc_graphql_client.py  guppy_client.py
gen3analysis/download/: tar_stream.py
gen3analysis/filters/: convertFiltersToGen3GQLFilters.py  convertFiltersToGenGQLFilters.py  convertGDCGQLFiltersToFilters.py  convert_operation_to_gql_operation.py  filters.py  gdcGQLFilters.py  gen3GQLFilters.py  test.py
gen3analysis/filters/es/: convertGen3GQLToElasticSearch.py  convert_gql_to_elastic_search.py  es_fieldpath_query.py  es_nested_path.py  nesting_registry.py  query_builder.py  utils.py
gen3analysis/gdc/: graphqlQuery.py  test.py
gen3analysis/gen3/: auth.py  csrfTokenCache.py  cursor.py  es_client.py  guppyAggregationQueryBuilder.py  guppyQuery.py
gen3analysis/gene_expression/: computations.py  data_loader.py  data_store.py
gen3analysis/models/: gene_expression.py  genes.py  survival.py
gen3analysis/query_builders/biospecimen/: fields.py
gen3analysis/query_builders/cases/: cases.py  download.py  summary_fields.py
gen3analysis/query_builders/cnv/: cnv.py
gen3analysis/query_builders/cnv_occurrence/: cnv_occurrence.py
gen3analysis/query_builders/files/: files.py  summary_fields.py
gen3analysis/query_builders/genomic/: aggregates.py  gene_facets.py  queries.py  ssm.py  ssm_facets.py  survival.py
gen3analysis/query_builders/ssm/: ssms.py
gen3analysis/query_builders/ssm_occurrence/: ssms_occurrence.py
gen3analysis/query_builders/utils/: combine_nested.py  extract_ids.py  get_query_fields.py  normalize_csv_or_list.py
gen3analysis/routes/: basic.py  cases.py  cnv.py  cnv_occurrence.py  cohorts.py  compare.py  download.py  embeddings.py  files.py  gene_expression.py  genomic.py  genomic_viz.py  slicing.py  ssm.py  ssm_occurrence.py  ssms.py  survival.py  survivalAnalysisGen3.py  survivalGDC.py  survivalGen3.py
gen3analysis/routes/genomicQueries/: queries.py  ssm.py
gen3analysis/routes/slicing/: __init__.py  blueprint.py  header.py  pyproject.toml  record.py  writer.py
gen3analysis/samples/cohortComparision/: cohortFilters_GDC.py  (+2 more)
gen3analysis/utils/: core.py  filterEdit.py  filters.py  group.py  metrics.py  response.py
tests/: .env  conftest.py  test_compare.py  test_convert_gql_to_elastic_search.py  test_csrf.py  test_survival.py  utils.py
tests/bamrest/: __init__.py  blueprint_test.py  test_read_params.py  test_slicing.py  test_utils.py
tests/data/: es_mappings.json
tests/gene_expression/: test_computations.py  test_data_loader.py  test_data_store.py
tests/utils/: test_utils.py
(+8 files in other folders)
