[project]
name = "gen3analysis"
version = "1.0.0"

[tool.poetry]
name = "gen3analysis"
version = "1.0.0"
description = "Gen3 Analysis Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "gen3analysis" }]

[tool.poetry.dependencies]
python = ">=3.9,<4"
asgi-lifespan = "^2.1.0,<3"
authutils = "<8"
fastapi = ">=0.115.8,<1"
cdislogging = ">=1.1.1,<2"
gunicorn = ">=20.1.0,<24"
gen3 = ">=4.27.4,<5"
gen3authz = ">=2.1.0,<3"
uvicorn = ">=0.27.0,<1"
glom = ">=24.11.0,<25"
pandas = ">=2.3.1,<3"
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.31,<3" }
asyncpg = ">=0.29.0,<1"
httpx = ">=0.23.3,<1"
prometheus-client = "^0.22.1,<1"
lifelines=">=0.30.0,<1"
pysam = "^0.23.3"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = ">=0.23.8"
pytest = ">=7.3.2"
coverage = ">=7.3.2"
pytest-cov = ">=4.1.0"
pytest-mock = "^3.14.0"
isort = ">=5.12.0"
black = ">=23.10.0"
pylint = ">=3.0.1"
rich = ">=14.0.0"

[tool.pytest.ini_options]
# Better default `pytest` command which adds coverage
#
# WARNING: overriding default `pytest` command to include all this coverage
#          may interfere with some debuggers (like PyCharm's), so it may not stop
#          on breakpoints. If you run into this issue, you can comment
#          the addopts out below and then run the pytest command with all these options
#          manually if you want to see coverage

# Fixes PytestDeprecationWarning: The configuration option "asyncio_default_fixture_loop_scope" is unset.
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
known_first_party = ["gen3analysis"]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
